// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.BlockLayout.Block props testing UU5.BlockLayout.Block menuBgStyle, menuColorSchema, menuBorderRadius 1`] = `
<div
  className="uublocklayout-1519s3b"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.BlockLayout.Block props testing actions=[{"activeContent":"Phone","content":"Call","activeIcon":"mdi-check","icon":"mdi-phone"}] 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uublocklayout-11o4yxr"
    key="cover"
  >
    <Row
      key="uu5-content-0"
    >
      Test
    </Row>
    <LsiButton
      bgStyle="outline"
      className="uublocklayout-z6d1z6"
      content={
        Array [
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-check"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />,
          "Phone",
        ]
      }
      onClick={[Function]}
      tooltip="Call"
    />
  </div>
</div>
`;

exports[`UU5.BlockLayout.Block props testing actions=[{"activeContent":"Phone","content":"Call","icon":"mdi-phone"}] 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uublocklayout-11o4yxr"
    key="cover"
  >
    <Row
      key="uu5-content-0"
    >
      Test
    </Row>
    <LsiButton
      bgStyle="outline"
      className="uublocklayout-z6d1z6"
      content={
        Array [
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-phone"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />,
          "Phone",
        ]
      }
      onClick={[Function]}
      tooltip="Call"
    />
  </div>
</div>
`;

exports[`UU5.BlockLayout.Block props testing actions=[{"icon":"mdi-email","content":"Send E-mail"},{"icon":"mdi-settings","content":"Settings"}] 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uublocklayout-11o4yxr"
    key="cover"
  >
    <Row
      key="uu5-content-0"
    >
      Test
    </Row>
    <div
      className="uublocklayout-7bma79"
    >
      <Dropdown
        bgStyle="outline"
        className="uublocklayout-z6d1z6"
        colorSchema="default"
        iconHidden={true}
        items={
          Array [
            Object {
              "disabled": undefined,
              "label": "Send E-mail",
              "onClick": [Function],
            },
            Object {
              "disabled": undefined,
              "label": "Settings",
              "onClick": [Function],
            },
          ]
        }
        key="other"
        label={
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-dots-vertical"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />
        }
        pullRight={true}
      />
    </div>
  </div>
</div>
`;

exports[`UU5.BlockLayout.Block props testing actions=[{"icon":"mdi-phone","active":true,"content":"Phone"},{"icon":"mdi-phone","content":"Phone","active":true,"bgStyle":"transparent","borderRadius":"8px","disabled":true},{"icon":"mdi-phone","content":{"cs":"Telefon","en":"Phone"}}] 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uublocklayout-11o4yxr"
    key="cover"
  >
    <Row
      key="uu5-content-0"
    >
      Test
    </Row>
    <div
      className="uublocklayout-7bma79"
    >
      <LsiButton
        bgStyle="outline"
        className="uublocklayout-z6d1z6"
        content={
          Array [
            <Icon
              authenticate={false}
              className={null}
              clickable={true}
              controlled={true}
              disabled={false}
              hidden={false}
              icon="mdi-phone"
              id={null}
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              src=""
              style={null}
              tooltip={null}
            />,
          ]
        }
        key="0"
        onClick={[Function]}
        tooltip="Phone"
      />
      <LsiButton
        bgStyle="transparent"
        borderRadius="8px"
        className="uublocklayout-z6d1z6"
        content={
          Array [
            <Icon
              authenticate={false}
              className={null}
              clickable={true}
              controlled={true}
              disabled={false}
              hidden={false}
              icon="mdi-phone"
              id={null}
              mainAttrs={null}
              name={null}
              nestingLevel={null}
              noIndex={false}
              parent={null}
              pureRender={false}
              ref_={null}
              selected={false}
              src=""
              style={null}
              tooltip={null}
            />,
          ]
        }
        disabled={true}
        key="1"
        onClick={[Function]}
        tooltip="Phone"
      />
      <Dropdown
        bgStyle="outline"
        className="uublocklayout-z6d1z6"
        colorSchema="default"
        iconHidden={true}
        items={
          Array [
            Object {
              "disabled": undefined,
              "label": <Lsi
                allowTags={Array []}
                className={null}
                content={null}
                controlled={true}
                disabled={false}
                dynamic={false}
                hidden={false}
                id={null}
                ignoreInnerHTML={false}
                language={null}
                lsi={
                  Object {
                    "cs": "Telefon",
                    "en": "Phone",
                  }
                }
                mainAttrs={null}
                name={null}
                nestingLevel={null}
                noIndex={false}
                params={null}
                parent={null}
                pureRender={false}
                ref_={null}
                selected={false}
                style={null}
                tooltip={null}
              />,
              "onClick": [Function],
            },
          ]
        }
        key="other"
        label={
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-dots-vertical"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />
        }
        pullRight={true}
      />
    </div>
  </div>
</div>
`;

exports[`UU5.BlockLayout.Block props testing actions=[{"icon":"mdi-phone","content":"Phone"},{"icon":"mdi-phone","content":{"cs":"Telefon","en":"Phone"}}] 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uublocklayout-11o4yxr"
    key="cover"
  >
    <Row
      key="uu5-content-0"
    >
      Test
    </Row>
    <div
      className="uublocklayout-7bma79"
    >
      <Dropdown
        bgStyle="outline"
        className="uublocklayout-z6d1z6"
        colorSchema="default"
        iconHidden={true}
        items={
          Array [
            Object {
              "disabled": undefined,
              "label": "Phone",
              "onClick": [Function],
            },
            Object {
              "disabled": undefined,
              "label": <Lsi
                allowTags={Array []}
                className={null}
                content={null}
                controlled={true}
                disabled={false}
                dynamic={false}
                hidden={false}
                id={null}
                ignoreInnerHTML={false}
                language={null}
                lsi={
                  Object {
                    "cs": "Telefon",
                    "en": "Phone",
                  }
                }
                mainAttrs={null}
                name={null}
                nestingLevel={null}
                noIndex={false}
                params={null}
                parent={null}
                pureRender={false}
                ref_={null}
                selected={false}
                style={null}
                tooltip={null}
              />,
              "onClick": [Function],
            },
          ]
        }
        key="other"
        label={
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-dots-vertical"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />
        }
        pullRight={true}
      />
    </div>
  </div>
</div>
`;

exports[`UU5.BlockLayout.Block props testing actions=[{"icon":"mdi-settings","content":"Settings","active":true,"colorSchema":"primary"}] 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uublocklayout-11o4yxr"
    key="cover"
  >
    <Row
      key="uu5-content-0"
    >
      Test
    </Row>
    <LsiButton
      bgStyle="outline"
      className="uublocklayout-z6d1z6"
      colorSchema="primary"
      content={
        Array [
          <Icon
            authenticate={false}
            className={null}
            clickable={true}
            controlled={true}
            disabled={false}
            hidden={false}
            icon="mdi-settings"
            id={null}
            mainAttrs={null}
            name={null}
            nestingLevel={null}
            noIndex={false}
            parent={null}
            pureRender={false}
            ref_={null}
            selected={false}
            src=""
            style={null}
            tooltip={null}
          />,
        ]
      }
      onClick={[Function]}
      tooltip="Settings"
    />
  </div>
</div>
`;

exports[`UU5.BlockLayout.Block props testing checkGrammar=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing checkGrammar=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing checkHighlight=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing checkHighlight=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing checkSpaces=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing checkSpaces=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing className="my-classname" 1`] = `
<div
  className="uublocklayout-1519s3b my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing content="This is Content from ContentMixin" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.BlockLayout.Block props testing content=12345 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.BlockLayout.Block props testing controlled=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing controlled=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing default props 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing disabled=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing disabled=true 1`] = `
<div
  className="uublocklayout-1519s3b uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.BlockLayout.Block props testing dynamic=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing dynamic=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing hidden=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing hidden=true 1`] = `
<div
  className="uublocklayout-1519s3b uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing id="myId" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="myId"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing ignoreHTML=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing ignoreHTML=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing mainAttrs=undefined 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing name="myName" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="bigBox" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="box" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="boxCollection" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="container" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="inline" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="page" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="smallBox" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing nestingLevel="spa" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing noIndex=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing noIndex=true 1`] = `
<div
  className="uublocklayout-1519s3b uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing pureRender=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing pureRender=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing selected=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing selected=true 1`] = `
<div
  className="uublocklayout-1519s3b uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing textCorrector=false 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing textCorrector=true 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;

exports[`UU5.BlockLayout.Block props testing tooltip="My Tooltip" 1`] = `
<div
  className="uublocklayout-1519s3b"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Row
    key="uu5-content-0"
  >
    Test
  </Row>
</div>
`;
